p/themes/Swage/swage.css
/* ... */
@media (max-width: 410px) {
	.nav_menu .stick {
		margin: 0;
	}
}
@media (max-width: 374px) {
	#nav_menu_views {
		display: none;
	}
}
button.as-link {
	outline: none;
}

.dropdown-target:target ~ .btn.dropdown-toggle {
	background: #00488b;
}

.tree-folder.active .tree-folder-title {
	background: #00488b;
	font-weight: bold;
}

.feed.item.empty {
	color: #fa8052;
}
.feed.item.empty.active {
	background: #fa8052;
	color: #fcfcfc;
}
.feed.item.empty.active > a {
	color: #fcfcfc;
}
.feed.item.empty > a {
	color: #fa8052;
}
.feed.item.error {
	color: #c46178;
}
.feed.item.error.active {
	background: #c46178;
	color: #fcfcfc;
}
.feed.item.error.active > a {
	color: #fcfcfc;
}
.feed.item.error > a {
	color: #c46178;
}

#stream.reader .flux {
	padding: 0 0 50px;
	background: #fcfcfc;
	color: #22303d;
	border: none;
}
#stream.reader .flux .author {
	margin: 0 0 10px;
	color: #969696;
	font-size: 90%;
}

#nav_menu_actions ul.dropdown-menu {
	left: 0;
}

#nav_menu_read_all ul.dropdown-menu {
	right: 0;
	left: auto;
}

#slider label {
	min-height: initial;
}

/*# sourceMappingURL=swage.css.map */

